# FreeCoding

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  start_freecoding.bat
.github/workflows/: ci.yml
app2api/: __init__.py  anthropic_compat.py  api.py  cli.py  config.py  dashboard.html  devices.py  diagnostics.py  events.py  models.py  ocr.py  openai_compat.py  preflight.py  service.py  workflows.py
app2api/drivers/: __init__.py  base.py  factory.py  mock.py  vivo_adb.py
app2api/target_configs/: lingbao.json  meituan.json  xiaohuoren.json
scripts/: ask_meituan.py
tests/: test_anthropic_compat.py  test_api.py  test_devices.py  test_openai_compat.py  test_service.py  test_vivo_adb.py  test_workflows.py
