[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "freecoding"
version = "0.1.0"
description = "Expose Xiaotuan, Lingbao, and Xiaohuoren on a real vivo phone through OpenAI- and Anthropic-compatible APIs."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "damue042", email = "damue0@outlook.com" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["android", "anthropic-compatible", "automation", "fastapi", "openai-compatible", "ocr", "vivo"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic-settings>=2.5,<3",
]

[project.optional-dependencies]
ocr = [
  "paddleocr==2.8.1",
  "paddlepaddle==2.6.2",
  "opencv-contrib-python==4.6.0.66",
]
client = ["openai>=1,<3", "anthropic>=0.40,<1"]
dev = [
  "build>=1.2,<2",
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.12,<1",
]

[project.scripts]
freecoding = "app2api.cli:main"

[project.urls]
Homepage = "https://github.com/Damue01/FreeCoding"
Issues = "https://github.com/Damue01/FreeCoding/issues"
Repository = "https://github.com/Damue01/FreeCoding"

[tool.setuptools.packages.find]
include = ["app2api*"]

[tool.setuptools.package-data]
app2api = ["dashboard.html", "target_configs/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "SIM", "UP"]
